--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "undici": "5.22.1",
     "vite": "4.4.7",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "@maptiler/sdk": "^1.1.2",
+    "axios": "^1.5.1"
   }
 }
