--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "@cloudflare/speedtest": "^1.3.0",
     "@maptiler/sdk": "^1.1.2",
     "axios": "^1.5.1"
   }
